microservice-improvements/mskafka_invoicing.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mskafka-invoicing
  name: mskafka-invoicing
  namespace: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mskafka-invoicing
  template:
    metadata:
      labels:
        app: mskafka-invoicing
    spec:
      containers:
      - image: mkozal/mskafka_invoicing
        name: mskafka-invoicing
