microservice-improvements/mskafka_order.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mskafka-order
  name: mskafka-order
  namespace: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mskafka-order
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mskafka-order
    spec:
      containers:
      - image: mkozal/mskafka_order
        name: mskafka-order
