microservice-improvements/mskafka_postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mskafka-postgres
  name: mskafka-postgres
  namespace: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mskafka-postgres
  template:
    metadata:
      labels:
        app: mskafka-postgres
    spec:
      containers:
      - image: mkozal/mskafka_postgres
        name: mskafka-postgres
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/init-user-db.sh
          name: mskafka-psql
          subPath: init-user-db.sh
      volumes:
      - configMap:
          name: mskafka-psql-cm
        name: mskafka-psql
