microservice-improvements/mskafka_shipping.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mskafka-shipping
  name: mskafka-shipping
  namespace: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mskafka-shipping
  template:
    metadata:
      labels:
        app: mskafka-shipping
    spec:
      containers:
      - image: mkozal/mskafka_shipping
        name: mskafka-shipping
