microservice-improvements/landing_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: landing
  name: landing
  namespace: store
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: landing
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: landing
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: mskafka-landing
      volumes:
      - configMap:
          name: mskafka-landing-cm
        name: mskafka-landing
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: landing
  name: landing
  namespace: store
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: landing
